--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,11 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script>
-		window.onerror = function (msg, url, linenumber) {
-			alert('Error message: ' + msg + '\nURL: ' + url + '\nLine Number: ' + linenumber);
+		window.onerror = function (msg, url, linenumber, colnumber) {
+			alert('Error message: ' + msg + '\nURL: ' + url + '\nLine Number: ' + linenumber + '\nCol Number: ' + colnumber);
 			return true;
 		}
 	</script>
-
-	<!-- <script>lol()</script> -->
 
 	<script defer src='/build/bundle.js'></script>
 </head>
